--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,7 +5,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 
 imports:
-    - { resource: app/config.yaml }
+    - { resource: 'app/config.yaml', ignore_errors: 'not_found' }
 
 parameters:
 
