Need config.yaml to build Docker image
(cherry picked from commit a9183f6f420b05895aa9e649875ed62054ee07ad)

--- a/config/app/config.yaml
+++ b/config/app/config.yaml
@@ -16,6 +16,6 @@ parameters:
       websocket_tls_timeout: 1
       websocket_retry: 0
       workers: 2
-    my_kaldivosk_server2:
-      websocket_url: ws://someotherhost:2700/
-      workers: 4
+#    my_kaldivosk_server2:
+#      websocket_url: ws://someotherhost:2700/
+#      workers: 4
