Fix composer install with APP_ENV=prod Bump dependencies
(cherry picked from commit cbc4fef70e8a5f07b8ea05aea5c6756bb6e14557)

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -23,6 +23,7 @@ services:
             - '../src/DependencyInjection/'
             - '../src/Entity/'
             - '../src/Kernel.php'
+            - '../src/functions.php'
 
 
     App\Service\ElasticsearchFileIndexer:
